--- a/cse341-project/package.json
+++ b/cse341-project/package.json
@@ -11,9 +11,15 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^2.5.6",
+    "enpm": "^0.3.0",
     "express": "^4.17.2",
     "express-handlebars": "^3.0.2",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
+    "install": "^0.13.0",
+    "mongoose": "^6.2.1",
     "nodemon": "^2.0.15",
     "pug": "^2.0.4"
   },
